# apex-backend

./: .env.example  .gitignore  API_REFERENCE.md  Dockerfile  README.md  TESTING_GUIDE.md  UI_INTEGRATION.md  debug_jwt.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_aryan.py  test_aryan_tasks.py  test_brain_dump.py  test_chaos_dump.py  test_chat.py  test_embed.py  test_key.py  test_list_models.py  test_llm.py  test_model_id.py  test_models.py  test_proactive_chat.py  test_replan.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  48f070cbd2b2_add_energy_required.py
apex/: .env.example  .gitignore  .pre-commit-config.yaml  alembic.ini  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
apex/.github/workflows/: ci.yml
apex/app/core/: cache.py  config.py  exceptions.py  logging.py  rate_limit.py  security.py
apex/app/middleware/: auth_middleware.py  cors_middleware.py  error_handler.py  logging_middleware.py
apex/app/models/: memory.py  task.py
apex/app/routers/: agent.py  auth.py  brief.py  integrations.py  reminders.py  tasks.py  websockets.py
apex/app/schemas/: agent.py  goal.py  memory.py  task.py  user.py
apex/app/services/: agent_service.py  brief_service.py  integration_service.py  llm_service.py  memory_service.py  reminder_service.py
apex/app/utils/: encryption.py  prompt_builder.py
apex/docs/: api_overview.md  architecture.md
apex/tests/integration/: test_auth.py  test_integrations_api.py  test_tasks_api.py  test_websockets.py
apex/tests/unit/: test_agent_service.py  test_brief_service.py  test_memory_service.py
app/core/: cache.py  config.py  events.py  exceptions.py  logging.py  security.py  supabase.py
app/db/: base.py  session.py  vector_store.py
app/middleware/: auth.py  error_handler.py  logging.py  rate_limit.py
app/models/: agent_message.py  calendar_event.py  goal.py  integration.py  task.py  user.py
app/routers/: __init__.py  agent.py  auth.py  brief.py  calendar.py  calls.py  chat.py  goals.py  integrations.py  memory.py  reminders.py  tasks.py  websockets.py
app/schemas/: agent.py  brief.py  calendar.py  call.py  chat.py  goal.py  integration.py  memory.py  reminder.py  task.py  user.py
app/services/: agent.py  brief.py  calendar.py  calendar_service.py  call.py  call_service.py  chat.py  chat_service.py  embedding.py  expense.py  goal.py  goal_service.py  habit.py  integration.py  lists.py  llm.py  llm_service.py  memory.py  memory_service.py  notes.py  notification.py  notification_service.py  project.py  reminder.py  routine.py  scheduler.py  task.py  task_service.py
supabase/: migrate_embeddings_384.sql  reset.sql  schema.sql  schema_v2.sql
tests/: conftest.py
(+7 files in other folders)
