[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apex-assistant"
version = "0.1.0"
description = "APEX — AI Personal Assistant OS"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "redis>=5.0.4",
    "anthropic>=0.28.0",
    "qdrant-client>=1.9.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=42.0.7",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "tenacity>=8.3.0",
    "aiofiles>=23.2.1",
    "greenlet>=3.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "faker>=25.2.0",
    "ruff>=0.4.5",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    "detect-secrets>=1.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.hatch.build.targets.wheel]
packages = ["app"]
